--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <title>Calculator</title>
 </head>
 <body>
-  
-
+  <div class="official">
+    <h1>Simple Calculator</h1>
+  </div>
 <section>
+  
   <div class="container">
     <div class="display">
       <div class="display-1">0</div>
@@ -21,25 +23,25 @@
         <div class="temp-result">0</div>
     </div>
     <div class="all-buttons">
-         <div class="button all-clear">C</div>
-         <div class="button last-clear">CE</div>
-         <div class="button operation">%</div>
-         <div class="button operation">/</div>
+         <div class="button all-clear sign">C</div>
+         <div class="button last-clear sign">CE</div>
+         <div class="button operation sign">%</div>
+         <div class="button operation sign">/</div>
          <div class="button number">7</div>
          <div class="button number">8</div>
          <div class="button number">9</div>
-         <div class="button operation">X</div>
+         <div class="button operation sign">X</div>
          <div class="button number">4</div>
          <div class="button number">5</div>
          <div class="button number">6</div>
-         <div class="button operation">-</div>
+         <div class="button operation sign">-</div>
          <div class="button number">1</div>
          <div class="button number">2</div>
          <div class="button number">3</div>
-         <div class="button operation">+</div>
+         <div class="button operation sign">+</div>
          <div class="button number btn-0">0</div>
-         <div class="button number dot">.</div>
-         <div class="button equal">=</div>
+         <div class="button number dot sign">.</div>
+         <div class="button equal sign">=</div>
     </div>
   </div>
 </section>
